projects/Api/deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capitalism-api
  namespace: capitalism
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capitalism-api
  template:
    metadata:
      labels:
        app: capitalism-api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: capitalism-api
          image: IMAGE_PLACEHOLDER
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: capitalism-api-data
