projects/Api/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capitalism-api
  namespace: capitalism
spec:
  selector:
    app: capitalism-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
